# MediaNameFixer

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.qoder/skills/medianamefixer-template/: SKILL.md
DemoUpdate/: version.json  部署说明.md
docs/: index.html
preUpdate/: download.html  index.html  version.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: diagnose_exif.rs  diagnose_mov.rs  diagnose_mp4.rs  test_meta_creationdate.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/core/: archiver.rs  mod.rs  renamer.rs
src-tauri/src/core/exif/: exiftool_provider.rs  kamadak_provider.rs  mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/thumbnail/: mod.rs  system_thumbnail.rs
src-tauri/src/utils/: mod.rs
src/api/: tauri.ts  update.ts
src/components/: file-tree.tsx  message-modal.tsx
src/pages/: HomePage.tsx  SettingsPage.tsx
src/store/: index.tsx
src/types/: index.ts
src/utils/: preview.ts
tools/: media-tool.bat
