[package]
name = "medianamefixer"
version = "0.2.0"
description = "MediaNameFixer"
authors = ["kongchun"]
repository = "https://github.com/kongchun/MediaNameFixer"
homepage = "https://techwebplus.cn/"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "medianamefixer_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
kamadak-exif = "0.6"
thiserror = "1"
regex = "1"
once_cell = "1"
dirs = "5"
reqwest = { version = "0.12", features = ["json", "blocking"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif", "bmp"] }
tokio = { version = "1", features = ["sync"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_Com", "Win32_UI_Shell"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
incremental = true
strip = true
panic = "abort"

